--- a/data/geany.glade
+++ b/data/geany.glade
@@ -2220,7 +2220,7 @@
                                     </child>
                                     <child>
                                       <object class="GtkRadioButton" id="radio_notebook_auto_sort_tabs_by_filename">
-                                        <property name="label" translatable="yes">By Filename</property>
+                                        <property name="label" translatable="yes">By filename</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">False</property>
@@ -2237,7 +2237,7 @@
                                     </child>
                                     <child>
                                       <object class="GtkRadioButton" id="radio_notebook_auto_sort_tabs_by_pathname">
-                                        <property name="label" translatable="yes">By Pathname</property>
+                                        <property name="label" translatable="yes">By pathname</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">False</property>
@@ -2250,6 +2250,23 @@
                                         <property name="expand">False</property>
                                         <property name="fill">False</property>
                                         <property name="position">3</property>
+                                      </packing>
+                                    </child>
+                                    <child>
+                                      <object class="GtkRadioButton" id="radio_notebook_auto_sort_tabs_by_folder">
+                                        <property name="label" translatable="yes">By folder</property>
+                                        <property name="visible">True</property>
+                                        <property name="can_focus">True</property>
+                                        <property name="receives_default">False</property>
+                                        <property name="tooltip_text" translatable="yes">Automatically sort tabs everytime a file is opened or when a document is saved to a new file.  The sorting order will be based on the full path of the file.</property>
+                                        <property name="use_underline">True</property>
+                                        <property name="draw_indicator">True</property>
+                                        <property name="group">radio_notebook_auto_sort_tabs_disabled</property>
+                                      </object>
+                                      <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">False</property>
+                                        <property name="position">4</property>
                                       </packing>
                                     </child>
                                   </object>
