--- a/data/geany.glade
+++ b/data/geany.glade
@@ -744,6 +744,26 @@
       </row>
     </data>
   </object>
+  <object class="GtkListStore" id="notebook_auto_sort_mode_list">
+    <columns>
+      <!-- column-name item -->
+      <column type="gchararray"/>
+    </columns>
+    <data>
+      <row>
+        <col id="0" translatable="yes">Disabled</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">By filename</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">By pathname</col>
+      </row>
+      <row>
+        <col id="0" translatable="yes">By folder</col>
+      </row>
+    </data>
+  </object>
   <object class="GtkDialog" id="prefs_dialog">
     <property name="can_focus">False</property>
     <property name="title" translatable="yes">Preferences</property>
@@ -2202,71 +2222,22 @@
                                         <property name="fill">False</property>
                                       </packing>
                                     </child>
-                                   <child>
-                                      <object class="GtkRadioButton" id="radio_notebook_auto_sort_tabs_disabled">
-                                        <property name="label" translatable="yes">Disabled</property>
+                                    <child>
+                                      <object class="GtkComboBox" id="combo_notebook_auto_sort_tabs">
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
-                                        <property name="receives_default">False</property>
-                                        <property name="tooltip_text" translatable="yes">Disable auto-sorting of tabs</property>
-                                        <property name="use_underline">True</property>
-                                        <property name="draw_indicator">True</property>
+                                        <property name="model">notebook_auto_sort_mode_list</property>
+                                        <child>
+                                          <object class="GtkCellRendererText" id="cellrenderertext_notebook_auto_sort_tabs"/>
+                                          <attributes>
+                                            <attribute name="text">0</attribute>
+                                          </attributes>
+                                        </child>
                                       </object>
                                       <packing>
                                         <property name="expand">False</property>
                                         <property name="fill">False</property>
                                         <property name="position">1</property>
-                                      </packing>
-                                    </child>
-                                    <child>
-                                      <object class="GtkRadioButton" id="radio_notebook_auto_sort_tabs_by_filename">
-                                        <property name="label" translatable="yes">By filename</property>
-                                        <property name="visible">True</property>
-                                        <property name="can_focus">True</property>
-                                        <property name="receives_default">False</property>
-                                        <property name="tooltip_text" translatable="yes">Automatically sort tabs everytime a file is opened or when a document is saved to a new file.  The sorting order will be based on the filename or basename.</property>
-                                        <property name="use_underline">True</property>
-                                        <property name="draw_indicator">True</property>
-                                        <property name="group">radio_notebook_auto_sort_tabs_disabled</property>
-                                      </object>
-                                      <packing>
-                                        <property name="expand">False</property>
-                                        <property name="fill">False</property>
-                                        <property name="position">2</property>
-                                      </packing>
-                                    </child>
-                                    <child>
-                                      <object class="GtkRadioButton" id="radio_notebook_auto_sort_tabs_by_pathname">
-                                        <property name="label" translatable="yes">By pathname</property>
-                                        <property name="visible">True</property>
-                                        <property name="can_focus">True</property>
-                                        <property name="receives_default">False</property>
-                                        <property name="tooltip_text" translatable="yes">Automatically sort tabs everytime a file is opened or when a document is saved to a new file.  The sorting order will be based on the full path of the file.</property>
-                                        <property name="use_underline">True</property>
-                                        <property name="draw_indicator">True</property>
-                                        <property name="group">radio_notebook_auto_sort_tabs_disabled</property>
-                                      </object>
-                                      <packing>
-                                        <property name="expand">False</property>
-                                        <property name="fill">False</property>
-                                        <property name="position">3</property>
-                                      </packing>
-                                    </child>
-                                    <child>
-                                      <object class="GtkRadioButton" id="radio_notebook_auto_sort_tabs_by_folder">
-                                        <property name="label" translatable="yes">By folder</property>
-                                        <property name="visible">True</property>
-                                        <property name="can_focus">True</property>
-                                        <property name="receives_default">False</property>
-                                        <property name="tooltip_text" translatable="yes">Automatically sort tabs everytime a file is opened or when a document is saved to a new file.  The sorting order will be based on the full path of the file.</property>
-                                        <property name="use_underline">True</property>
-                                        <property name="draw_indicator">True</property>
-                                        <property name="group">radio_notebook_auto_sort_tabs_disabled</property>
-                                      </object>
-                                      <packing>
-                                        <property name="expand">False</property>
-                                        <property name="fill">False</property>
-                                        <property name="position">4</property>
                                       </packing>
                                     </child>
                                   </object>
