--- a/data/geany.glade
+++ b/data/geany.glade
@@ -548,6 +548,12 @@
     <property name="stock">gtk-revert-to-saved</property>
     <property name="icon-size">1</property>
   </object>
+  <object class="GtkImage" id="image_rename1">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-edit</property>
+    <property name="icon-size">1</property>
+  </object>
   <object class="GtkImage" id="image4060">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -6454,6 +6460,17 @@
                                 </child>
                               </object>
                             </child>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkImageMenuItem" id="menu_rename1">
+                            <property name="label" translatable="yes">R_ename</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="use_underline">True</property>
+                            <property name="image">image_rename1</property>
+                            <property name="use_stock">False</property>
+                            <signal name="activate" handler="on_rename1_activate" swapped="no"/>
                           </object>
                         </child>
                         <child>
