--- a/data/geany.glade
+++ b/data/geany.glade
@@ -578,6 +578,12 @@
     <property name="stock">gtk-close</property>
     <property name="icon-size">1</property>
   </object>
+  <object class="GtkImage" id="image_close_inexistent">
+    <property name="visible">True</property>
+    <property name="can_focus">False</property>
+    <property name="stock">gtk-close</property>
+    <property name="icon-size">1</property>
+  </object>
   <object class="GtkImage" id="image4061">
     <property name="visible">True</property>
     <property name="can_focus">False</property>
@@ -6747,6 +6753,17 @@
                             <property name="image">image4060</property>
                             <property name="use_stock">False</property>
                             <signal name="activate" handler="on_close_other_documents1_activate" swapped="no"/>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkImageMenuItem" id="menu_close_inexistent_documents1">
+                            <property name="label" translatable="yes">Close Ine_xistent Documents</property>
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="use_underline">True</property>
+                            <property name="image">image_close_inexistent</property>
+                            <property name="use_stock">False</property>
+                            <signal name="activate" handler="on_menu_close_inexistent_documents1_activate" swapped="no"/>
                           </object>
                         </child>
                         <child>
